--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout: page
 title: "About"
-navtitle: "About"
-description: "你是我的梦想"
-header-img: "img/about-bg.jpg"
+navtitle: "关于我"
+description: "Finding Out Why"
+header-img: 
 multilingual: true
 ---
 
