--- a/archive.html
+++ b/archive.html
@@ -1,9 +1,9 @@
 ---
-title: Archive
+title: Archiveeee
 layout: default
 navtitle: "目录"
 description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+header-img: 
 ---
 
 <!-- 
