--- a/Archive.html
+++ b/Archive.html
@@ -1,17 +1,20 @@
 ---
-title: Archive
-layout: default
+layout: page
+title: "Archive"
 navtitle: "目录"
-description: keep hungry keep foolish
+description: "keep hungry keep foolish"
 header-img: 
+multilingual: true
 ---
+
+
 
 <!-- 
 Credits: this page shamelessly borrowed a lot from:
 https://github.com/kitian616/jekyll-TeXt-theme
 -->
 <!-- Page Header -->
-{% include intro-header.html type='page' short=true %}
+<!-- {% include intro-header.html type='page' short=true %} -->
 
 <!-- Main Content -->
 <div class="container">
