--- a/Archive.html
+++ b/Archive.html
@@ -1,20 +1,17 @@
 ---
-layout: page
-title: "Archive"
+title: Archive
+layout: default
 navtitle: "目录"
-description: "keep hungry keep foolish"
+description: keep hungry keep foolish
 header-img: 
-multilingual: true
 ---
-
-
 
 <!-- 
 Credits: this page shamelessly borrowed a lot from:
 https://github.com/kitian616/jekyll-TeXt-theme
 -->
 <!-- Page Header -->
-<!-- {% include intro-header.html type='page' short=true %} -->
+{% include intro-header.html type='page' %}
 
 <!-- Main Content -->
 <div class="container">
